homework/5.kubernetes-network/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000 
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: pgvolume
